add button reload

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
         <link rel="stylesheet" href="css/style.css">
-        <link res="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/normalize.css">
     </head>
     <body>
         <div class="wrapper">
+            <h1 class="header__name">TIC TAC TOE</h1>
             <table class="board">
                 <tr>
                     <td class="cell" id="0"></td>
@@ -27,7 +28,11 @@
                     <td class="cell" id="8"></td>
                 </tr>
             </table>
-            
+            <div class="setting">
+                <img class="image__reload btn" src="img/reload.png" alt="">
+                <div class="player__btn btn">1P</div>
+                <div class="player__btn btn">2P</div>
+            </div>
         </div>
     </body>
     <script src="js/app.js"></script>
